aligned images and fixed footer

--- a/style.css
+++ b/style.css
@@ -52,14 +52,28 @@ footer p {
   color: white;
   padding-bottom: 1.5%;
   text-align: center;
+  position: absolute;
+  margin-top: 104%;
 }
 
 #geology {
   margin-right: 35%;
   padding-left: 4%;
   padding-top: 2.5%;
+  float: left;
 }
 
+#geo-surface {
+  margin-top: -18%;
+}
+
+.geo-img {
+  height: 20%;
+  width: 20%;
+  float: right;
+  margin-top: -25%;
+  margin-right: 8%;
+}
 p {
   padding-top: 0.5%;
   color: rgb(181, 181, 181);
